--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -4,25 +4,26 @@
     <body>
         @@include('./partials/nav.html')
         <main>
-            <header id="header" class="container-fluid section-header pt-3">
+            <header id="header" class="container-fluid page-header-bg-image pt-5">
+                <div class="overlay"></div>
+                <img class="page-header-mobile" src="./media/page-header-mobile-portfolio.jpg" alt="" />
+                <img class="page-header-desktop" src="./media/page-header-desktop-portfolio.jpg" alt="" />
                 <div class="row h-100">
                     <div class="col-12 col-lg-8 text-white p-3 p-md-5 offset-lg-1 d-flex flex-column align-self-center">
-                        <h1 class="subhead pt-5">Website Design & Web Development Ireland</h1>
-                        <span class="py-3 m-0 fw-bolder display-1">Hey there,<br />We design and build websites.</span>
-                        <hr class="my-5 short-line" />
-                        <p class="m-0">We are an experienced website design and frontend web development team <br />helping business and organisations all over Ireland.</p>
+                        <h1 class="py-3 m-0 fw-bolder display-1">Our Portfolio.</h1>
+                        <span class="subhead pb-5 text-white">Our clients trust us to help them grow their businesses.</span>
                     </div>
                 </div>
             </header>
 
             <!-- PROJECTS SECTION -->
             <section class="container">
-                <div class="row pb-5 my-lg-5">
+                <!-- <div class="row pb-5 my-lg-5">
                     <div class="col-12 py-lg-5 pt-5" id="projects">
                         <h2 class="mt-5 subhead">Web Design and Development</h2>
                         <span class="display-2 heading">Our Portfolio</span>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row my-5 pt-5 portfolio-item">
                     <!-- Oatlands College -->
@@ -289,84 +290,6 @@
                 </div>
             </section>
 
-            <!-- PERSONAL PROJECTS SECTION -->
-            <!-- <section class="container">
-                <div class="row pb-5 my-lg-5">
-                    <div class="col-12 py-lg-5">
-                        <span class="mt-5 subhead">Website Designer and Developer, Dublin</span>
-                        <h2 class="display-1">Personal Projects</h2>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div data-aos="fade-right" class="col-12 position-relative">
-                        <div class="owl-vegan owl-carousel owl-theme">
-                            <div class="item bg-pink">
-                                <picture>
-                                    <source srcset="./media/takeaway-1.webp" type="image/webp" />
-                                    <img class="takeaway-img" src="/media/takeaway-1.png" />
-                                </picture>
-                            </div>
-                            <div class="item bg-yellow">
-                                <picture>
-                                    <source srcset="./media/takeaway-2.webp" type="image/webp" />
-                                    <img class="takeaway-img" src="/media/takeaway-2.png" />
-                                </picture>
-                            </div>
-                            <div class="item bg-blue">
-                                <picture>
-                                    <source srcset="./media/takeaway-3.webp" type="image/webp" />
-                                    <img class="takeaway-img" src="/media/takeaway-3.png" />
-                                </picture>
-                            </div>
-                            <div class="item bg-purple">
-                                <picture>
-                                    <source srcset="./media/takeaway-4.webp" type="image/webp" />
-                                    <img class="takeaway-img" src="/media/takeaway-4.png" />
-                                </picture>
-                            </div>
-                        </div>
-                        <div data-aos="fade-down" class="slider-overlay">
-                            <h3 class="mb-2">Vegan Takeaway</h3>
-                            <p>This responsive website is dynamcailly generated using vanilla javascript by importing a JSON file with product names, prices and stock status.</p>
-                            <a href="https://amberandemerald.com/takeaway/index.html" class="btn btn-outline-light rounded-0 text-uppercase my-3" target="_blank">View live project</a>
-                        </div>
-                    </div>
-                    <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
-                        <div class="hoverbox" style="background-image: url('./media/calc.webp')" title="Your Geography Sux Bro">
-                            <div id="hoverbox-title" class="hoverbox-title">React Calculator</div>
-                            <div id="hoverboxcontent" class="hoverbox-content">
-                                <h3 class="mb-2">React Calculator</h3>
-                                <p>A simple calculator built with React<br />and deployed on Firebase.</p>
-                                <a href="https://portfolio-react-calculator.web.app/" class="btn btn-outline-light rounded-0 text-uppercase mt-3" target="_blank">View live project</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
-                        <div class="hoverbox" style="background-image: url('./media/to-do.webp')" title="To Do List">
-                            <div id="hoverbox-title" class="hoverbox-title">To Do List</div>
-                            <div id="hoverboxcontent" class="hoverbox-content">
-                                <h3 class="mb-2">Javascript To Do List</h3>
-                                <p>A canonical addition to any developer's portfolio, a standard vanilla javascript to-do list.</p>
-                                <a href="https://todo.amberandemerald.com" class="btn btn-outline-light rounded-0 text-uppercase mt-3" target="_blank">View live project</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div data-aos="fade-up" class="col-12 col-lg-4 mb-4">
-                        <div class="hoverbox" style="background-image: url('./media/geo.webp')" title="Your Geography Sux Bro">
-                            <div id="hoverbox-title" class="hoverbox-title">Your Geography Sux, Bro</div>
-                            <div id="hoverboxcontent" class="hoverbox-content">
-                                <h3 class="mb-2">Your Geography Sux, Bro</h3>
-                                <p>A simple capital city game that uses the CountryLayer API.</p>
-                                <a href="/countries/index.html" class="btn btn-outline-light rounded-0 text-uppercase mt-3" target="_blank">View live project</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-
             <!-- WORDPRESS PROJECTS SECTION -->
             <section class="container">
                 <div class="row pb-5 my-lg-5">
@@ -418,19 +341,6 @@
                                 <p>This Wordpress site uses WooCommerce to allow this UK-Based artist to sell his work.</p>
                                 <a href="https://www.nigelcheney.com" class="btn btn-outline-light rounded-0 text-uppercase mt-3" target="_blank">View live project</a>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- SERVICES SECTION -->
-            <section id="services" class="section-services">
-                <div class="container">
-                    <div class="row py-5">
-                        <div class="col-12 col-lg-5 offset-lg-7 py-5">
-                            <span class="subhead">What we can do for you</span>
-                            <h2 class="display-1">Services</h2>
-                            <p>We provide front-end web development using HTML, CSS, JavaScript and React. We can also set up wordpress websites that can be customised for your business. We have good attention to detail and we communicate efficiently. We don't commit to projects if I cannot deliver them to a high standard.</p>
                         </div>
                     </div>
                 </div>
