--- a/src/html/web-design-quote-ireland.html
+++ b/src/html/web-design-quote-ireland.html
@@ -6,10 +6,12 @@
 
         <main>
             <header id="header" class="container-fluid page-header-bg-image pt-5">
-                <img src="./media/computer-user.jpg" alt="" />
+                <div class="overlay"></div>
+                <img class="page-header-mobile" src="./media/page-header-mobile-quote.jpg" alt="" />
+                <img class="page-header-desktop" src="./media/page-header-desktop-quote.jpg" alt="" />
                 <div class="row h-100">
                     <div class="col-12 col-lg-8 text-white p-3 p-md-5 offset-lg-1 d-flex flex-column align-self-center">
-                        <h2 class="subhead pt-5">Website Design & Web Development Ireland</h2>
+                        <span class="subhead pt-5">Website Design & Web Development Ireland</span>
                         <h1 class="py-3 m-0 fw-bolder display-1">Get a free quote for a website design.</h1>
                     </div>
                 </div>
