--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
         <main>
             <header id="header" class="container-fluid section-header pt-3">
                 <div class="row h-100">
-                    <div class="col-12 col-lg-8 text-white p-3 p-md-5 offset-lg-1 d-flex flex-column align-self-center">
+                    <div class="col-12 col-lg-8 text-white p-3 p-md-5 offset-lg-1 d-flex flex-column align-self-center home-header">
                         <h1 class="subhead mt-5 text-highlight-green">Website Design & Web Development Ireland | Get a Free Quote</h1>
                         <span class="py-3 m-0 fw-bolder display-1">We design and build engaging websites.</span>
                         <hr class="my-5 short-line" />
@@ -19,8 +19,8 @@
             <section class="container">
                 <div class="row pb-5 my-lg-5">
                     <div class="col-12 py-lg-5 pt-5" id="projects">
-                        <h2 class="mt-5 subhead">Web Design and Development</h2>
-                        <span class="display-2 heading">Our Clients</span>
+                        <h2 class="mt-5 subhead">A Track Record of Success</h2>
+                        <span class="display-2 heading">People We Work With</span>
                     </div>
                 </div>
             </section>
